Enhance README with additional sections
Added requirements, how to run, and database information to README.